Fixed wrapping for elements on screen

--- a/student-store-ui/src/components/CategoryButton/CategoryButton.css
+++ b/student-store-ui/src/components/CategoryButton/CategoryButton.css
@@ -1,5 +1,5 @@
 .category-button {
-    background-color: pink;
+    background-color: green;
     margin: 0.25em;
 }
 
