--- a/student-store-ui/src/components/Navbar/Navbar.css
+++ b/student-store-ui/src/components/Navbar/Navbar.css
@@ -8,7 +8,6 @@
 }
 
 .navbar .filters {
-    background-color: red;
     display: flex;
     flex-direction: row;
 }
